// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "wfa/measurement/internal/kingdom/recurring_exchange.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for managing `RecurringExchange` resources.
service RecurringExchanges {
  // Gets an existing `RecurringExchange`.
  rpc GetRecurringExchange(GetRecurringExchangeRequest)
      returns (RecurringExchange);

  // Creates a `RecurringExchange`.
  rpc CreateRecurringExchange(CreateRecurringExchangeRequest)
      returns (RecurringExchange);
}

// Request message for "/RecurringExchanges.GetRecurringExchange".
message GetRecurringExchangeRequest {
  fixed64 external_recurring_exchange_id = 1;
}

// Request message for "/RecurringExchanges.CreateRecurringExchange".
message CreateRecurringExchangeRequest {
  RecurringExchange recurring_exchange = 1;
}
